webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
#      k8s内部访问端口
      port: 6380
#      外部访问端口，必须在30000-32767
      nodePort: 31379
#      pod暴露的端口
      targetPort: 6379
  type: NodePort
