webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  selector:
    app: webook
  ports:
    - name: http
      protocol: TCP
      port: 98
      targetPort: 8080
  type: ClusterIP
